# stonks

./: .env.example  README.md  architecture.md  pyproject.toml
amfe_orchestrator/: agent.py
dataform/: fundamental_scores.sqlx  latest_screening_master.sqlx  screening_master.sqlx  technical_signals.sqlx
docs/agents/: orchestrator.md  qa-agent.md  research-service.md  screener.md  stock-analysis.md
docs/architecture/: bigquery-schema.md  system-overview.md
docs/data-pipeline/: ingestion.md  seed-historical.md  transformations.md
docs/deployment/: cloud-run.md  vertex-agent-engine.md
docs/scripts/: backtest.md
docs/tools/: environment-setup.md  mcp-toolbox.md  realtime-quote.md  stock-api.md
ingest_job/: main.py
mcp_toolbox/: realtime_quote.py  stock_api.py  tools.yaml
research_service/: __init__.py  agent.py
scripts/: backtest.py  seed_historical.py
tests/: conftest.py  test_backtest.py  test_ingest_job.py  test_orchestrator.py  test_realtime_quote.py  test_research_service.py  test_seed_historical.py  test_stock_api.py
